tests/bad/sizeof_bad_type.ae
/// fail: Invalid type

def main() {
    let x = sizeof(Foo)
}